--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 FLOWExaFMM = "a07d1f4e-0e34-4d8b-bfef-e5b961477d34"
 
 [compat]
