--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,11 @@ FLOWExaFMM = "2.0.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
+Elliptic = "b305315f-e792-5b7a-8f41-49f472929428"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Roots", "Cubature", "Elliptic", "LinearAlgebra", "DifferentialEquations"]
