Keep half of cylinder as free particles

--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 Elliptic = "b305315f-e792-5b7a-8f41-49f472929428"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [targets]
-test = ["Test", "Roots", "Cubature", "Elliptic", "LinearAlgebra", "DifferentialEquations"]
+test = ["Test", "Roots", "Cubature", "Elliptic", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
