--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,7 @@ ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-FLOWFMM = "ce07d0d3-2b9f-49ba-89eb-12c800257c85"
+FastMultipole = "ce07d0d3-2b9f-49ba-89eb-12c800257c85"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ImplicitAD = "e7cbb90b-9b31-4eb2-a8c8-45099c074ee1"
