Use JacobiElliptic instead of Elliptic for ForwardDiff compatibility

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,6 @@
 [deps]
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
-Elliptic = "b305315f-e792-5b7a-8f41-49f472929428"
+JacobiElliptic = "2a8b799e-c098-4961-872a-356c768d184c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
