--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
+Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 FastMultipole = "ce07d0d3-2b9f-49ba-89eb-12c800257c85"
@@ -19,6 +20,7 @@ Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TestEnv = "1e6cf692-eddd-4d53-88a5-2d735e33781b"
@@ -30,11 +32,11 @@ julia = "1.6"
 [extras]
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-Elliptic = "b305315f-e792-5b7a-8f41-49f472929428"
+JacobiElliptic = "2a8b799e-c098-4961-872a-356c768d184c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Roots", "Cubature", "Elliptic", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
+test = ["Test", "Roots", "Cubature", "JacobiElliptic", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
