--- a/Project.toml
+++ b/Project.toml
@@ -9,11 +9,11 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
-Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 FastMultipole = "ce07d0d3-2b9f-49ba-89eb-12c800257c85"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ImplicitAD = "e7cbb90b-9b31-4eb2-a8c8-45099c074ee1"
 JacobiElliptic = "2a8b799e-c098-4961-872a-356c768d184c"
@@ -31,7 +31,7 @@ WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 julia = "1.6"
 
 [extras]
-Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JacobiElliptic = "2a8b799e-c098-4961-872a-356c768d184c"
@@ -40,4 +40,4 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Roots", "Cubature", "JacobiElliptic", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
+test = ["Test", "Roots", "HCubature", "JacobiElliptic", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
