Replace JacobiElliptic with EllipticFunctions for better AD compatibility

--- a/Project.toml
+++ b/Project.toml
@@ -11,12 +11,12 @@ ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+EllipticFunctions = "6a4e32cb-b31a-4929-85af-fb29d9a80738"
 FastMultipole = "ce07d0d3-2b9f-49ba-89eb-12c800257c85"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ImplicitAD = "e7cbb90b-9b31-4eb2-a8c8-45099c074ee1"
-JacobiElliptic = "2a8b799e-c098-4961-872a-356c768d184c"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
@@ -31,13 +31,13 @@ WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 julia = "1.6"
 
 [extras]
-HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-JacobiElliptic = "2a8b799e-c098-4961-872a-356c768d184c"
+EllipticFunctions = "6a4e32cb-b31a-4929-85af-fb29d9a80738"
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Roots", "HCubature", "JacobiElliptic", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
+test = ["Test", "Roots", "HCubature", "EllipticFunctions", "LinearAlgebra", "DifferentialEquations", "ForwardDiff"]
