--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,2 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FLOWVPM = "6e19019d-7c31-4940-9d16-c3f15dfe6020"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
