--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,6 @@ HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -21,7 +20,18 @@ TestEnv = "1e6cf692-eddd-4d53-88a5-2d735e33781b"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
-FastMultipole = "2.0.0"
+BSON = "0.3"
+DataStructures = "0.18"
+EllipticFunctions = "2"
+FastMultipole = "2"
+HCubature = "1"
+HDF5 = "0.17"
+Primes = "0.5"
+Roots = "2"
+SpecialFunctions = "2"
+StaticArrays = "1"
+TestEnv = "1"
+WriteVTK = "1"
 julia = "1.6"
 
 [extras]
